<resources>
    <string name="app_name">Weather</string>

    <string name="change_city">Change city</string>

    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="refresh_page">Refresh page</string>
</resources>
